refactor: clean generator utility classes and remove unused resolver